@@ -11,7 +11,14 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       SCons now respects scanner keys for implicit dependencies.
     - Resolved missing cross-language dependencies for
       SWIG bindings (fixes #2264).
- 
+
+  From Dirk Baechle:
+    - Removed a lot of compatibility methods and workarounds
+      for Python versions < 2.7, in order to prepare the work
+      towards a combined 2.7/3.x version. (PR #284)
+      Also fixed the default arguments for the print_tree and
+      render_tree methods. (PR #284, too)
+
 
 RELEASE 2.4.1 - Mon, 07 Nov 2015 10:37:21 -0700
 
